new font syntax fixed

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             </div>
                             <div class="carousel-item">
                               <div class="d-flex justify-content-center">
-                                  <img src="./img/arrozalhorno.jfif" class="img-fluid carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/arrozalhorno.jfif','Arroz al horno con longaniza, morcilla y blanquet')">
+                                  <img src="./img/arrozalhorno.jfif" class="img-fluid carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/arrozalhorno.jfif','Arroz al horno con longaniza morcilla y blanquet')">
                               </div>
                               <div class="emptyDivCaptions"></div>
                               <div class="carousel-caption d-md-block">
@@ -99,7 +99,7 @@
                             </div>
                             <div class="carousel-item">
                               <div class="d-flex justify-content-center">
-                                  <img src="./img/fideua.jpg" class="img-fluid carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/fideua.jpg','Fideuà tradicional con mejillón, gambas y tacos de mero')">
+                                  <img src="./img/fideua.jpg" class="img-fluid carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/fideua.jpg','Fideuà tradicional con mejillón gambas y tacos de mero')">
                               </div>
                               <div class="emptyDivCaptions"></div>
                               <div class="carousel-caption d-md-block">
@@ -119,7 +119,7 @@
                             </div>
                             <div class="carousel-item">
                               <div class="d-flex justify-content-center">
-                                  <img src="./img/ensalada.jpg" class="img-fluid carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/ensalada.jpg','Ensalada valenciana con tomate, lechuga, cebolla, huevo duro, atún y aceitunas chafadas')">
+                                  <img src="./img/ensalada.jpg" class="img-fluid carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/ensalada.jpg','Ensalada valenciana con tomate lechuga cebolla huevo duro atún y aceitunas chafadas')">
                               </div>
                               <div class="emptyDivCaptions"></div>
                               <div class="carousel-caption  d-md-block">
@@ -160,7 +160,7 @@
                       <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="d-flex justify-content-center">
-                                <img src="./img/paella-valenciana-tradicional.jpg" class="img-fluid carru" alt="ensaladaLegumbres" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/paella-valenciana-tradicional.jpg','La paella auténtica valenciana de pollo, conejo, batxoqueta, garrofón y tabella.')">
+                                <img src="./img/paella-valenciana-tradicional.jpg" class="img-fluid carru" alt="ensaladaLegumbres" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/paella-valenciana-tradicional.jpg','La paella auténtica valenciana de pollo conejo batxoqueta garrofón y tabella')">
                             </div>
                             <div class="emptyDivCaptions"></div>
                           <div class="carousel-caption d-md-block">
@@ -170,7 +170,7 @@
                         </div>
                         <div class="carousel-item">
                           <div class="d-flex justify-content-center">
-                              <img src="./img/fideuaOk.png" class="img-fluid carru" alt="polloRustido" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/fideuaOk.png','Fideuà tradicional con mejillón, gambas, almejas y tacos de mero')">
+                              <img src="./img/fideuaOk.png" class="img-fluid carru" alt="polloRustido" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/fideuaOk.png','Fideuà tradicional con mejillón gambas almejas y tacos de mero')">
                           </div>
                           <div class="emptyDivCaptions"></div>
                           <div class="carousel-caption d-md-block">
@@ -180,7 +180,7 @@
                         </div>
                         <div class="carousel-item">
                           <div class="d-flex justify-content-center">
-                              <img src="./img/arrozsenyoret.JPG" class="img-fluid carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/arrozsenyoret.JPG','Arroz del senyoret con gambas, mejillones y sepia. Todo pelado')">
+                              <img src="./img/arrozsenyoret.JPG" class="img-fluid carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/arrozsenyoret.JPG','Arroz del senyoret con gambas mejillones y sepia Todo pelado')">
                           </div>
                           <div class="emptyDivCaptions"></div>
                           <div class="carousel-caption d-md-block">
@@ -190,7 +190,7 @@
                         </div>
                         <div class="carousel-item">
                           <div class="d-flex justify-content-center">
-                              <img src="./img/paellaverd.jpg" class="img-fluid carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/paellaverd.jpg','Paella de verduras con cebolla, pimiento, calabacín pochado, alcachofas y espárragos trigueros. Marca de la casa!')">
+                              <img src="./img/paellaverd.jpg" class="img-fluid carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/paellaverd.jpg','Paella de verduras con cebolla pimiento calabacín pochado alcachofas y espárragos trigueros Marca de la casa!')">
                           </div>
                           <div class="emptyDivCaptions"></div>
                           <div class="carousel-caption d-md-block">
@@ -200,7 +200,7 @@
                         </div>
                         <div class="carousel-item">
                           <div class="d-flex justify-content-center">
-                              <img src="./img/fideuapato.jpg" class="carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/fideuapato.jpg','Fideuà de magret de pato con boletus, cebolla pochada y tacos de foie. Espectacular')">
+                              <img src="./img/fideuapato.jpg" class="carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/fideuapato.jpg','Fideuà de magret de pato con boletus cebolla pochada y tacos de foie Espectacular')">
                           </div>
                           <div class="emptyDivCaptions"></div>
                           <div class="carousel-caption d-md-block">
@@ -210,7 +210,7 @@
                         </div>
                         <div class="carousel-item">
                           <div class="d-flex justify-content-center">
-                              <img src="./img/arroznegro.jpg" class="img-fluid carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/arroznegro.jpg','Arroz de marisco con gambón, pulpitos y tacos de calamar cocinado en su propia tinta.')">
+                              <img src="./img/arroznegro.jpg" class="img-fluid carru" alt="capture" data-toggle="modal" data-target="#exampleModal" onclick="showModal('exampleModal','./img/arroznegro.jpg','Arroz de marisco con gambón pulpitos y tacos de calamar cocinado en su propia tinta')">
                           </div>
                           <div class="emptyDivCaptions"></div>
                           <div class="carousel-caption d-md-block">
