--- a/menu.html
+++ b/menu.html
@@ -179,7 +179,7 @@
               <h5>Los Sábados en la Frescor</h5>
             <p><span id="paellaval2">Paella Valenciana</span> <br>
               <span id="paellaverdu">Paella de verduras con escarola fresca</span><br>
-              <span id="fideuachipi">Fideuà de chipirones y alcachofas"</span><br>
+              <span id="fideuachipi">Fideuà de chipirones y alcachofas</span><br>
               <span id="arrozsenyo">Arroz "Del Senyoret"</span><br>
               <span id="caracolas">Caracolas a los cuatro quesos</span><br>
               <span id="lasagna2">Lasaña de carne</span><br>
