--- a/menu.html
+++ b/menu.html
@@ -127,7 +127,7 @@
               <h5>Los Jueves en la Frescor</h5>
             <p><span id="paellapollo">Paella de pollo y conejo</span> <br>
               <span id="fideuaboletus">Fideuà marinera con boletus</span><br>
-              <span id="lasagna">Lasaña de carne"</span><br>
+              <span id="lasagna">Lasaña de carne</span><br>
               <span id="traserospollo">Traseros de pollo rustidos</span><br>
               <span id="espiralesverdura">Espirales con verduras</span><br>
               <span id="rape">Rape encebollado con soja y espinacas frescas</span><br>
